ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: kaan.localserver
      http:
        paths:
          - path: /prefect
            pathType: Prefix
            backend:
              service:
                name: prefect-server
                port:
                  number: 4200
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus-server
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-service
spec:
  type: LoadBalancer
  selector:
    app: minimal-ingress
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
